# ChangeLog for www-apps/otrs
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.5 2004/09/26 12:40:40 rl03 Exp $

*otrs-1.3.1 (26 Sep 2004)

  26 Sep 2004; Renat Lumpau <rl03@gentoo.org> +files/postinstall-en-1.3.1.txt,
  +files/reconfig-1.3.1, +otrs-1.3.1.ebuild:
  Version bump. Closes bug #65217. Reorganized install locations, everything is
  now contained in ${VHOST_ROOT}

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> otrs-1.2.4.ebuild:
  Masked otrs-1.2.4.ebuild stable for ppc

  03 Sep 2004; Renat Lumpau <rl03@gentoo.org> files/reconfig:
  The reconfig hook now cleans up after itself.

  03 Sep 2004; David Holm <dholm@gentoo.org> otrs-1.2.4.ebuild:
  Added to ~ppc.

*otrs-1.2.4 (26 Aug 2004)

  26 Aug 2004; Renat Lumpau <rl03@gentoo.org> +metadata.xml,
  +files/postinstall-en.txt, +files/reconfig, +otrs-1.2.4.ebuild:
  Initial ebuild. Closes bug #56452.
