@@ -1,10 +1,6 @@
 MD5 13b0776155fad09f7d5d2022db062ab9 otrs-1.3.1.ebuild 2736
-MD5 8a4ece066b650cf0589d7b383a2866a7 otrs-1.2.4.ebuild 2872
-MD5 94706ffb1505ab6b36995a8d33ac5af1 ChangeLog 968
+MD5 df13a3271417c87118aa6e3200f1991a ChangeLog 1200
 MD5 224c312cc23d02aa06c26a4da3cc1f90 metadata.xml 221
 MD5 2dffe94c580dc24f94db0dbdebea29a6 files/postinstall-en-1.3.1.txt 770
-MD5 0802fdb74ba58ad4bf68831073f5e437 files/postinstall-en.txt 755
-MD5 c85b5ad5614552631d0e4ac09131e6ff files/digest-otrs-1.2.4 67
 MD5 38bd7a6452e5d03b299c6856c36f00a6 files/digest-otrs-1.3.1 67
 MD5 6c0246b62071a940173aa036a496610d files/reconfig-1.3.1 629
-MD5 32d1f40e697cb807ec6ab1cf95edb8ea files/reconfig 216
