@@ -1,7 +1,0 @@
-#!/bin/bash
-
-if [ $1 = "start" -o $1 = "install" ]; then
-	sed -i "s|/opt/otrs|${VHOST_ROOT}|" ${VHOST_ROOT}/Kernel/Config.pm.dist ${VHOST_ROOT}/scripts/*
-elif [ $1 = "clean" ]; then
-	rm -f ${VHOST_ROOT}/scripts/*
-fi
