@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/otrs
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.5 2004/09/26 12:40:40 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/otrs/ChangeLog,v 1.6 2004/09/26 12:45:12 rl03 Exp $
+
+  26 Sep 2004; Renat Lumpau <rl03@gentoo.org> -files/postinstall-en.txt,
+  -files/reconfig, -otrs-1.2.4.ebuild:
+  Removing old/broken version. Deleting the only ppc-stable ebuild! It was
+  marked stable erroneously (per pvdabeel).
 
 *otrs-1.3.1 (26 Sep 2004)
 
